robots and dialogs

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -5,4 +5,9 @@
 /MorningZombieRecipe
 /RobotGraffitiRecipe
 /RobotSquare.class
+/Welcome.class
 /robot.jar
+/robotgraffit.class
+/RobotGraffiti.class
+/MorningZombie.class
+/Greeter.class
